Added solved message and flag counter

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Minescape</title>
+
     <style>
     	* { padding: 0; margin: 0; }
     	canvas { background: #eee; display: block; margin: 0 auto; }
@@ -11,9 +12,10 @@
 	
 </head>
 <body>
-
+    <center><div id="mines">Loading...</div></center>
+    <center><div id="solved"></div></center>
 	<script src="script.js"></script>
-	<canvas id="myCanvas" width="1024" height="1024"></canvas>
+    <canvas id="myCanvas" width="1024" height="1024"></canvas>
 
 </body>
 </html>
