--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <center><div id="mines">Loading...</div></center>
-    <center><div id="solved"></div></center>
+    <center><div id="solved">Good Luck!</div></center>
 	<script src="script.js"></script>
     <canvas id="myCanvas" width="1024" height="1024"></canvas>
 
